fix display errors on ios

--- a/src/style/_steps.scss
+++ b/src/style/_steps.scss
@@ -8,7 +8,7 @@
 
   @media screen and (max-width:48em) {
    flex-direction: column;
-  
+   
 }
 
     &__left{
@@ -16,10 +16,10 @@
     display: flex;
     flex-direction: column;
     padding: 1rem;
-    
     @media screen and (max-width:48em) {
-      flex: 1 1 40vh;
+      flex: 1; 
    }
+ 
     }
 
     &__wrapper{
@@ -45,7 +45,7 @@
     }
     &__imgcon{
     flex: 1 0 20vw;
-
+ 
     }
     &__img{
     width: 100%;
@@ -57,11 +57,12 @@
     display: flex;
     flex-direction: column;
     padding: 1rem;
+    @media screen and (max-width:48em) {
+      flex: 1; 
+   }
+ 
     }
     
-    @media screen and (max-width:48em) {
-      flex: 1 1 40vh;
-   }
 
 }
 
